--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   "description": "",
   "dependencies": {
     "mysql2": "^3.11.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
